[package]
name = "egui_extras"
version = "0.33.3"
authors = [
  "Dominik Rössler <dominik@freshx.de>",
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
  "René Rössler <rene@freshx.de>",
]
description = "Extra functionality and widgets for the egui GUI library - Forked for egui_spreadsheet"
edition = "2024"
rust-version = "1.92"
homepage = "https://github.com/emilk/egui"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]


[features]
default = ["dep:mime_guess2"]

## Shorthand for enabling all the different types of image loaders.
all_loaders = ["file", "http", "image", "svg", "gif", "webp"]

## Enable [`DatePickerButton`] widget.
datepicker = ["chrono"]

## Add support for loading images from `file://` URIs.
file = ["dep:mime_guess2"]

## Support loading gif images.
gif = ["image", "image/gif"]

## Support loading webp images.
webp = ["image", "image/webp"]

## Add support for loading images via HTTP.
http = ["dep:ehttp"]

## Add support for loading images with the [`image`](https://docs.rs/image) crate.
##
## You also need to ALSO opt-in to the image formats you want to support, like so:
## ```toml
## image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for
## ```
image = ["dep:image"]

## Derive serde Serialize/Deserialize on stateful structs
serde = ["egui/serde", "enum-map/serde", "dep:serde"]

## Support loading svg images.
svg = ["resvg"]

## Support rendering text in svg images.
svg_text = ["svg", "resvg/text", "resvg/system-fonts"]

## Enable better syntax highlighting using [`syntect`](https://docs.rs/syntect).
syntect = ["dep:syntect"]


[dependencies]
egui = { version = "0.33", default-features = false }

ahash = { version = "0.8.12", default-features = false, features = ["no-rng", "std"] }
enum-map = "2.7.3"
log = { version = "0.4.28", features = ["std"] }
profiling = { version = "1.0.17", default-features = false }

#! ### Optional dependencies

# Serde for serializing state
serde = { version = "1.0", features = ["derive"], optional = true }

# Date operations needed for datepicker widget
chrono = { version = "0.4.42", default-features = false, features = ["clock", "js-sys", "std", "wasmbind"], optional = true }

## Enable this when generating docs.
document-features = { version = "0.2.11", optional = true }

image = { version = "0.25.6", default-features = false, optional = true }

# file feature
mime_guess2 = { version = "2.3.1", default-features = false, optional = true }

# syntax highlighting
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"], optional = true }

# svg feature
resvg = { version = "0.45.1", default-features = false, optional = true }

# http feature
ehttp = { version = "0.6.0", default-features = false, optional = true }
